# pyttyd

./: .gitattributes  .gitignore  MANIFEST.in  README.md  setup.cfg  setup.py  test.py
.github/workflows/: python-publish.yml
src/pyttyd/: __init__.py  __main__.py  app.py  common.py  crud.py  crypto.py  ctl.py  depends.py  model.py  pty.py  schema.py  terminal.py  test.py  webapp.py
src/pyttyd/routes/: __init__.py  html.py  ssh.py  terminal.py  tty.py
src/pyttyd/static/css/: navbar-fixed-top.css
src/pyttyd/static/js/: crypt.js  index.js  nanoid.js  terminal.js  tty.js
src/pyttyd/template/: content1.html  content2.html  index.html  terminal.html
src/pyttyd/template/modal/: edit.html  new.html
src/webdevtool/: __main__.py  crypto.py  depends.py  model.py  schema.py  webapp.py  websocket.py
src/webdevtool/template/: 111.html  index.html  terminal.html
test/docker-machine/: Dockerfile  docker-compose.yml
test/docker-machine/nopam/: Dockerfile
test/docker-machine/python39/: Dockerfile
tests/: ws.py
