[metadata]
name = webdevtool
version = attr: webdevtool.__version__
url = https://zhanglaiya.github.io/
project_urls =
    Source Code = https://github.com/zhanglaiya/webdevtool/
license = Apache
license_files = LICENSE
author = zhanglaiya
author_email = 315396460@qq.com
maintainer = zhanglaiya
maintainer_email = 315396460@qq.com
description = devtool show by browser
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    wdt = webdevtool.__main__:main

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    webdevtool
    tests

[coverage:paths]
source =
    src
    */site-packages