[metadata]
name = pyttyd
version = attr: pyttyd.__version__
url = https://zhanglaiya.github.io/
project_urls =
    Source Code = https://github.com/zhanglaiya/pyttyd/
license = Apache
license_files = LICENSE
author = zhanglaiya
author_email = 315396460@qq.com
maintainer = zhanglaiya
maintainer_email = 315396460@qq.com
description = devtool show by browser
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Public Source License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
package_dir = = src
include_package_data = True
python_requires = >= 3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyttyd = pyttyd.__main__:main
    pyttyctl = pyttyd.__main__:ctl

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    pyttyd
    tests

[coverage:paths]
source =
    src
    */site-packages